--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,6 @@
-h1 {
-  color: red;
-}
+@import url(/vendor/normalize.css);
+@import url(/vendor/fonts.css);
+@import url(/blocks/header/header.css);
+@import url(/blocks/search/search.css);
+@import url(/blocks/author/author.css);
+@import url(/blocks/footer/footer.css);
