--- a/blocks/header/__explorer/header__explorer.css
+++ b/blocks/header/__explorer/header__explorer.css
@@ -1,12 +1,5 @@
 .header__explorer {
-  display: block;
-  position: absolute;
-
-
-  margin-top: 30px;
-  margin-bottom: 26px;
-  margin-left: 106px;
-  max-width: 200px;
+  margin: 30px 0px 26px 104px;
 
   font-family: Roboto Slab;
   font-size: 20px;
@@ -16,6 +9,5 @@
   letter-spacing: 0px;
   text-align: left;
 
-  text-decoration: none;
   color: #ffffff;
 }
