--- a/blocks/header/__main/header__main.css
+++ b/blocks/header/__main/header__main.css
@@ -1,10 +1,7 @@
 .header__main {
-  max-width: 69px;
+  position: relative;
 
-  position: absolute;
-  top: 30px;
-  bottom: 26px;
-  right: 312px;
+  margin: 30px 0px 0px 0px;
 
   font-family: Roboto;
   font-size: 18px;
