--- a/blocks/header/__rectangle/header__rectangle.css
+++ b/blocks/header/__rectangle/header__rectangle.css
@@ -1,15 +1,13 @@
 .header__rectangle {
   width: 176px;
+  height: 48px;
 
-  position: absolute;
-  top: 19px;
-  bottom: 13px;
-  right: 100px;
+  margin: 19px 104px 13px 34px;
 
   color: #ffffff;
   text-decoration: none;
 
-  padding: 11.88px 12px 15.12px 12px;
+  padding: 11.25px 12px 18px 18px;
 
   border: 1px solid #ffffff;
   box-sizing: border-box;
