--- a/src/style.css
+++ b/src/style.css
@@ -2,5 +2,14 @@
 @import url(/vendor/fonts.css);
 @import url(/blocks/header/header.css);
 @import url(/blocks/search/search.css);
+@import url(/blocks/preloader/preloader.css);
+@import url(/blocks/result/result.css);
 @import url(/blocks/author/author.css);
 @import url(/blocks/footer/footer.css);
+
+@import url(/blocks/results/results.css);
+@import url(/blocks/saved-cards/saved-cards.css);
+
+.disabled {
+  display: none;
+}
