--- a/blocks/header/__main/_active/header__main_active.css
+++ b/blocks/header/__main/_active/header__main_active.css
@@ -1,5 +1,5 @@
-.header__main_active {
+/* .header__main_active {
   border-bottom: 3px solid #ffffff;
   padding-bottom: 23px;
   margin-right: 0px;
-}
+} */
