--- a/blocks/saved-cards/__author/saved-cards__author.css
+++ b/blocks/saved-cards/__author/saved-cards__author.css
@@ -1,6 +1,10 @@
 .saved-cards__author {
+  position: absolute;
+  left: 24px;
+  bottom: 24px;
+
   width: 352px;
-  margin: 0px 24px 24px 24px;
+  margin: 0;
 
   font-family: Roboto Slab;
   font-style: normal;
