--- a/blocks/saved-cards/__container/saved-cards__container.css
+++ b/blocks/saved-cards/__container/saved-cards__container.css
@@ -1,10 +1,10 @@
 .saved-cards__container {
   width: 400px;
   height: 576px;
+  border-radius: 25px;
+  margin-right: 0px;
 
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  position: relative;
 
   background-color: #ffffff;
 }
