finish html and css

--- a/blocks/header/__active/_light/header__active_light.css
+++ b/blocks/header/__active/_light/header__active_light.css
@@ -4,3 +4,9 @@
   padding-bottom: 47px;
   margin-right: 0px;
 }
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .header__active_light {
+    padding-bottom: 37px;
+  }
+}
