--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,7 +2,6 @@
 @import url(/blocks/header/__explorer/header__explorer.css);
 @import url(/blocks/header/__main/header__main.css);
 @import url(/blocks/header/__rectangle/header__rectangle.css);
-@import url(/blocks/header/__main/_active/header__main_active.css);
 @import url(/blocks/header/__nav/header__nav.css);
 @import url(/blocks/header/__saved/header__saved.css);
 @import url(/blocks/header/__greta-img/header__greta-img.css);
@@ -37,7 +36,7 @@
   background: #1A1B22;
   box-shadow: inset 0px -1px 0px #D1D2D6;
 
-  display: flex;
+  display: none;
   justify-content: space-between;
 }
 
@@ -53,6 +52,10 @@
 
 @media screen and (min-width: 768px) {
   .header {
+    display: flex;
+  }
+
+  .header-dark {
     display: flex;
   }
 }
