--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -19,3 +19,10 @@
 
   cursor: pointer;
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .popup__button {
+    width: 100%;
+    margin-top: 23px;
+  }
+}
