--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -8,3 +8,12 @@
 
   cursor: pointer;
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .popup__close {
+    top: -30px;
+    right: 5px;
+    width: 24px;
+    height: 24px;
+  }
+}
