--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -15,5 +15,10 @@
 
   padding: 0;
   padding-bottom: 10px;
+}
 
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .popup__input {
+    width: 80%;
+  }
 }
