--- a/blocks/popup/__text-parol/popup__text-parol.css
+++ b/blocks/popup/__text-parol/popup__text-parol.css
@@ -10,3 +10,9 @@
 
   color: #2F71E5;
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .popup__text-parol {
+    margin-top: 30px;
+  }
+}
