--- a/blocks/saved-cards/__theme/saved-cards__theme.css
+++ b/blocks/saved-cards/__theme/saved-cards__theme.css
@@ -21,3 +21,11 @@
 
   cursor: pointer;
 }
+
+@media screen and (min-width: 320px) and (max-width: 1023px) {
+  .saved-cards__theme {
+    top: 8px;
+    left: 8px;
+
+  }
+}
