--- a/blocks/signup/__container/signup__container.css
+++ b/blocks/signup/__container/signup__container.css
@@ -9,3 +9,11 @@
 
   padding: 43px 79px 51px 38px;
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .signup__container {
+    width: 80vw;
+
+    padding: 20px 35px 25px 19px;
+  }
+}
