--- a/blocks/signup/__header/signup__header.css
+++ b/blocks/signup/__header/signup__header.css
@@ -12,3 +12,10 @@
   margin: 0;
   margin-bottom: 14px;
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .signup__header {
+    width: 80%;
+    font-size: 20px;
+  }
+}
