--- a/blocks/signup/__log/signup__log.css
+++ b/blocks/signup/__log/signup__log.css
@@ -11,3 +11,9 @@
 
   margin: 0;
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .signup__log {
+    font-size: 15px;
+  }
+}
