--- a/blocks/result/__header/result__header.css
+++ b/blocks/result/__header/result__header.css
@@ -16,6 +16,7 @@
 @media screen and (min-width: 320px) and (max-width: 1023px) {
   .result__header {
     margin-top: 20px;
+    max-width: 288px;
   }
 }
 
