--- a/blocks/saved-cards/__statement/saved-cards__statement.css
+++ b/blocks/saved-cards/__statement/saved-cards__statement.css
@@ -34,3 +34,9 @@
     line-height: 12px;
   }
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .saved-cards__statement {
+    top: 60px;
+  }
+}
