--- a/blocks/popup/__button/_active/popup__button_active.css
+++ b/blocks/popup/__button/_active/popup__button_active.css
@@ -1,4 +1,14 @@
 .popup__button_active {
+  width: 358px;
+  height: 64px;
+  margin: 39px 0px 0px 0px;
+
+  background: #2f71e5;
+  border-radius: 100px;
+  border: none;
+  box-shadow: 0px 5px 15px rgba(14, 26, 57, 0.2);
+
+
   font-family: Roboto;
   font-style: normal;
   font-weight: 500;
@@ -8,6 +18,13 @@
   text-align: center;
 
   color: #FFFFFF;
-  background: #2f71e5;
-  box-shadow: 0px 5px 15px rgba(14, 26, 57, 0.2);
+
+  cursor: pointer;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .popup__button_active {
+    width: 100%;
+    margin-top: 23px;
+  }
 }
