--- a/blocks/header/__greta/header__greta.css
+++ b/blocks/header/__greta/header__greta.css
@@ -10,6 +10,8 @@
   border: 1px solid #ffffff;
   box-sizing: border-box;
   border-radius: 100px;
+
+  cursor: pointer;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
