--- a/blocks/popup/__error/_sign/popup__error_sign.css
+++ b/blocks/popup/__error/_sign/popup__error_sign.css
@@ -1,4 +1,17 @@
-.popup__error_sign {
+.popup__error_signin {
+  margin: 17px 0px 8px 0px;
+
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+  text-align: center;
+
+  color: #ff0000;
+}
+
+.popup__error_signup {
   margin: 17px 0px 8px 0px;
 
   font-family: Inter;
