--- a/blocks/saved-cards/__delete-img/saved-cards__delete-img.css
+++ b/blocks/saved-cards/__delete-img/saved-cards__delete-img.css
@@ -1,4 +1,19 @@
 .saved-cards__delete-img {
   width: 24px;
   height: 24px;
+
+  background-image: url('../../../images/trash.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  z-index: 100;
+}
+
+.saved-cards__delete-img:hover {
+  width: 24px;
+  height: 24px;
+
+  background-image: url('../../../images/trash-dark.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  z-index: 100;
 }
