--- a/blocks/saved-cards/__list/saved-cards__list.css
+++ b/blocks/saved-cards/__list/saved-cards__list.css
@@ -1,24 +1,15 @@
 .saved-cards__list {
-  margin: 62px 102px 62px 102px;
+  margin-top: 64px;
+  margin-bottom: 64px;
 
   display: grid;
-  grid-template-columns: repeat(auto-fill, 400px);
+  grid-template-columns: repeat(3, 224px);
   grid-gap: 16px 16px;
   justify-content: center;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-  .saved-cards__list {
-    margin: 32px 40px 32px 40px;
-
-    grid-template-columns: repeat(auto-fill, 224px);
-    grid-gap: 8px 8px;
-  }
-}
-
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .saved-cards__list {
-    grid-template-columns: repeat(auto-fill, 288px);
-    margin: 20px 16px 15px 16px;
+    grid-template-columns: repeat(1, 224px);
   }
 }
