--- a/blocks/saved-cards/__text/saved-cards__text.css
+++ b/blocks/saved-cards/__text/saved-cards__text.css
@@ -1,5 +1,5 @@
 .saved-cards__text {
-  width: 352px;
+  width: 190px;
   margin: 0px 24px 18px 24px;
 
   font-family: Roboto;
@@ -11,18 +11,15 @@
   color: #1A1B22;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (min-width: 320px) and (max-width: 1023px) {
   .saved-cards__text {
-    width: 192px;
-
     margin: 0px 16px 12px 16px;
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 768px) {
   .saved-cards__text {
-    width: 256px;
-
-    margin: 0px 16px 8px 16px;
+    font-size: 12px;
+    line-height: 18px;
   }
 }
