--- a/blocks/signup/__log/signup__log.css
+++ b/blocks/signup/__log/signup__log.css
@@ -8,8 +8,8 @@
   line-height: 22px;
 
   color: #2F71E5;
-
   margin: 0;
+  cursor: pointer;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
