--- a/src/pages/index/index.css
+++ b/src/pages/index/index.css
@@ -9,6 +9,7 @@
 
 @import url(/blocks/results/results.css);
 @import url(/blocks/saved-cards/saved-cards.css);
+@import url(/blocks/result-cards/result-cards.css);
 
 @import url(/blocks/popup/popup.css);
 @import url(/blocks/signup/signup.css);
